y.output
Terminals unused in grammar

   ALOCA
   OP_IGUAL


Grammar

    0 $accept: programa $end

    1 programa: subprogramas

    2 principal: MAIN ABRE_PAREN FECHA_PAREN ABRE_CHAVES sentencas FECHA_CHAVES

    3 subprogramas: subprograma
    4             | subprograma subprogramas

    5 subprograma: proc
    6            | funcao
    7            | principal
    8            | atribuicao

    9 proc: PROC ID ABRE_PAREN FECHA_PAREN ABRE_CHAVES sentencas FECHA_CHAVES
   10     | PROC ID ABRE_PAREN params FECHA_PAREN ABRE_CHAVES sentencas FECHA_CHAVES

   11 funcao: FUNC ID ABRE_PAREN FECHA_PAREN DOIS_PONTOS tipoPrimitivo ABRE_CHAVES sentencas FECHA_CHAVES
   12       | FUNC ID ABRE_PAREN params FECHA_PAREN DOIS_PONTOS tipoPrimitivo ABRE_CHAVES sentencas FECHA_CHAVES

   13 params: param
   14       | param VIRGULA params

   15 param: tipoPrimitivo ID

   16 sentencas: sentenca
   17          | sentenca sentencas

   18 sentenca: atribuicao
   19         | LIBERA ID PONTO_VIRGULA
   20         | se
   21         | enquanto
   22         | para
   23         | imprime
   24         | expr PONTO_VIRGULA
   25         | chamadaProcOuFuncao
   26         | RETORNO expr PONTO_VIRGULA

   27 atribuicao: VAR ID DOIS_PONTOS tipoPrimitivo OP_ATRIBUICAO expr PONTO_VIRGULA
   28           | CONST ID DOIS_PONTOS tipoPrimitivo OP_ATRIBUICAO expr PONTO_VIRGULA
   29           | ID OP_ATRIBUICAO expr PONTO_VIRGULA
   30           | atribuicaoArray

   31 atribuicaoArray: VAR ID DOIS_PONTOS ABRE_COLCHETE tipoPrimitivo FECHA_COLCHETE OP_ATRIBUICAO instanciaArray
   32                | CONST ID DOIS_PONTOS ABRE_COLCHETE tipoPrimitivo FECHA_COLCHETE OP_ATRIBUICAO instanciaArray

   33 instanciaArray: ID
   34               | ABRE_COLCHETE listaValoresArray FECHA_COLCHETE

   35 listaValoresArray: expr
   36                  | expr VIRGULA listaValoresArray

   37 se: SE ABRE_PAREN expr FECHA_PAREN ENTAO sentencas FIM_SE
   38   | SE ABRE_PAREN expr FECHA_PAREN ENTAO sentencas SENAO sentencas FIM_SE

   39 enquanto: ENQUANTO ABRE_PAREN expr FECHA_PAREN FACA sentencas FIM_ENQUANTO

   40 para: PARA ABRE_PAREN atribuicao expr PONTO_VIRGULA exprUnaria FECHA_PAREN FACA sentencas FIM_PARA

   41 expr: termo
   42     | exprUnaria
   43     | exprBinaria

   44 termo: literal
   45      | ID
   46      | acessoArray
   47      | chamadaProcOuFuncao

   48 acessoArray: ID ABRE_COLCHETE V_INTEIRO FECHA_COLCHETE
   49            | ID ABRE_COLCHETE ID FECHA_COLCHETE

   50 exprUnaria: OP_INC termo
   51           | OP_DEC termo
   52           | OP_LOGICO_NEG expr

   53 exprBinaria: expr operadorBinario termo
   54            | expr operadorBinario exprUnaria

   55 operadorBinario: operadorAritmetico
   56                | operadorLogico
   57                | operadorRelacional

   58 operadorAritmetico: OP_SOMA
   59                   | OP_SUB
   60                   | OP_MULT
   61                   | OP_DIV
   62                   | OP_RESTO

   63 operadorLogico: OP_LOGICO_E
   64               | OP_LOGICO_OU

   65 operadorRelacional: OP_IGUALDADE
   66                   | OP_DIFERENTE
   67                   | OP_MAIOR
   68                   | OP_MENOR
   69                   | OP_MAIOR_IGUAL
   70                   | OP_MENOR_IGUAL

   71 imprime: IMPRIME ABRE_PAREN V_STRING FECHA_PAREN PONTO_VIRGULA
   72        | IMPRIME ABRE_PAREN V_INTEIRO FECHA_PAREN PONTO_VIRGULA
   73        | IMPRIME ABRE_PAREN V_REAL FECHA_PAREN PONTO_VIRGULA
   74        | IMPRIME ABRE_PAREN ID FECHA_PAREN PONTO_VIRGULA

   75 literal: V_INTEIRO
   76        | V_REAL
   77        | V_STRING
   78        | literalBool

   79 literalBool: VERDADE
   80            | FALSO

   81 tipoPrimitivo: TIPO_INT
   82              | TIPO_CHAR
   83              | TIPO_REAL
   84              | TIPO_VOID
   85              | TIPO_STRING
   86              | TIPO_BOOL

   87 listaIds: expr
   88         | expr VIRGULA listaIds

   89 chamadaProcOuFuncao: ID ABRE_PAREN FECHA_PAREN PONTO_VIRGULA
   90                    | ID ABRE_PAREN listaIds FECHA_PAREN PONTO_VIRGULA


Terminals, with rules where they appear

$end (0) 0
error (256)
V_INTEIRO (258) 48 72 75
V_REAL (259) 73 76
V_STRING (260) 71 77
ID (261) 9 10 11 12 15 19 27 28 29 31 32 33 45 48 49 74 89 90
MAIN (262) 2
RETORNO (263) 26
FUNC (264) 11 12
PROC (265) 9 10
TIPO_CHAR (266) 82
TIPO_VOID (267) 84
TIPO_REAL (268) 83
TIPO_INT (269) 81
TIPO_STRING (270) 85
TIPO_BOOL (271) 86
VERDADE (272) 79
FALSO (273) 80
VAR (274) 27 31
CONST (275) 28 32
SE (276) 37 38
SENAO (277) 38
ENTAO (278) 37 38
FIM_SE (279) 37 38
ENQUANTO (280) 39
FIM_ENQUANTO (281) 39
PARA (282) 40
FIM_PARA (283) 40
OP_ATRIBUICAO (284) 27 28 29 31 32
PONTO_VIRGULA (285) 19 24 26 27 28 29 40 71 72 73 74 89 90
DOIS_PONTOS (286) 11 12 27 28 31 32
VIRGULA (287) 14 36 88
FACA (288) 39 40
IMPRIME (289) 71 72 73 74
ALOCA (290)
LIBERA (291) 19
ABRE_PAREN (292) 2 9 10 11 12 37 38 39 40 71 72 73 74 89 90
FECHA_PAREN (293) 2 9 10 11 12 37 38 39 40 71 72 73 74 89 90
ABRE_COLCHETE (294) 31 32 34 48 49
FECHA_COLCHETE (295) 31 32 34 48 49
ABRE_CHAVES (296) 2 9 10 11 12
FECHA_CHAVES (297) 2 9 10 11 12
OP_SOMA (298) 58
OP_SUB (299) 59
OP_MULT (300) 60
OP_DIV (301) 61
OP_RESTO (302) 62
OP_LOGICO_OU (303) 64
OP_LOGICO_E (304) 63
OP_LOGICO_NEG (305) 52
OP_MENOR (306) 68
OP_MAIOR (307) 67
OP_MENOR_IGUAL (308) 70
OP_MAIOR_IGUAL (309) 69
OP_IGUALDADE (310) 65
OP_DIFERENTE (311) 66
OP_INC (312) 50
OP_DEC (313) 51
OP_IGUAL (314)


Nonterminals, with rules where they appear

$accept (60)
    on left: 0
programa (61)
    on left: 1, on right: 0
principal (62)
    on left: 2, on right: 7
subprogramas (63)
    on left: 3 4, on right: 1 4
subprograma (64)
    on left: 5 6 7 8, on right: 3 4
proc (65)
    on left: 9 10, on right: 5
funcao (66)
    on left: 11 12, on right: 6
params (67)
    on left: 13 14, on right: 10 12 14
param (68)
    on left: 15, on right: 13 14
sentencas (69)
    on left: 16 17, on right: 2 9 10 11 12 17 37 38 39 40
sentenca (70)
    on left: 18 19 20 21 22 23 24 25 26, on right: 16 17
atribuicao (71)
    on left: 27 28 29 30, on right: 8 18 40
atribuicaoArray (72)
    on left: 31 32, on right: 30
instanciaArray (73)
    on left: 33 34, on right: 31 32
listaValoresArray (74)
    on left: 35 36, on right: 34 36
se (75)
    on left: 37 38, on right: 20
enquanto (76)
    on left: 39, on right: 21
para (77)
    on left: 40, on right: 22
expr (78)
    on left: 41 42 43, on right: 24 26 27 28 29 35 36 37 38 39 40 52
    53 54 87 88
termo (79)
    on left: 44 45 46 47, on right: 41 50 51 53
acessoArray (80)
    on left: 48 49, on right: 46
exprUnaria (81)
    on left: 50 51 52, on right: 40 42 54
exprBinaria (82)
    on left: 53 54, on right: 43
operadorBinario (83)
    on left: 55 56 57, on right: 53 54
operadorAritmetico (84)
    on left: 58 59 60 61 62, on right: 55
operadorLogico (85)
    on left: 63 64, on right: 56
operadorRelacional (86)
    on left: 65 66 67 68 69 70, on right: 57
imprime (87)
    on left: 71 72 73 74, on right: 23
literal (88)
    on left: 75 76 77 78, on right: 44
literalBool (89)
    on left: 79 80, on right: 78
tipoPrimitivo (90)
    on left: 81 82 83 84 85 86, on right: 11 12 15 27 28 31 32
listaIds (91)
    on left: 87 88, on right: 88 90
chamadaProcOuFuncao (92)
    on left: 89 90, on right: 25 47


State 0

    0 $accept: . programa $end

    ID     shift, and go to state 1
    MAIN   shift, and go to state 2
    FUNC   shift, and go to state 3
    PROC   shift, and go to state 4
    VAR    shift, and go to state 5
    CONST  shift, and go to state 6

    programa         go to state 7
    principal        go to state 8
    subprogramas     go to state 9
    subprograma      go to state 10
    proc             go to state 11
    funcao           go to state 12
    atribuicao       go to state 13
    atribuicaoArray  go to state 14


State 1

   29 atribuicao: ID . OP_ATRIBUICAO expr PONTO_VIRGULA

    OP_ATRIBUICAO  shift, and go to state 15


State 2

    2 principal: MAIN . ABRE_PAREN FECHA_PAREN ABRE_CHAVES sentencas FECHA_CHAVES

    ABRE_PAREN  shift, and go to state 16


State 3

   11 funcao: FUNC . ID ABRE_PAREN FECHA_PAREN DOIS_PONTOS tipoPrimitivo ABRE_CHAVES sentencas FECHA_CHAVES
   12       | FUNC . ID ABRE_PAREN params FECHA_PAREN DOIS_PONTOS tipoPrimitivo ABRE_CHAVES sentencas FECHA_CHAVES

    ID  shift, and go to state 17


State 4

    9 proc: PROC . ID ABRE_PAREN FECHA_PAREN ABRE_CHAVES sentencas FECHA_CHAVES
   10     | PROC . ID ABRE_PAREN params FECHA_PAREN ABRE_CHAVES sentencas FECHA_CHAVES

    ID  shift, and go to state 18


State 5

   27 atribuicao: VAR . ID DOIS_PONTOS tipoPrimitivo OP_ATRIBUICAO expr PONTO_VIRGULA
   31 atribuicaoArray: VAR . ID DOIS_PONTOS ABRE_COLCHETE tipoPrimitivo FECHA_COLCHETE OP_ATRIBUICAO instanciaArray

    ID  shift, and go to state 19


State 6

   28 atribuicao: CONST . ID DOIS_PONTOS tipoPrimitivo OP_ATRIBUICAO expr PONTO_VIRGULA
   32 atribuicaoArray: CONST . ID DOIS_PONTOS ABRE_COLCHETE tipoPrimitivo FECHA_COLCHETE OP_ATRIBUICAO instanciaArray

    ID  shift, and go to state 20


State 7

    0 $accept: programa . $end

    $end  shift, and go to state 21


State 8

    7 subprograma: principal .

    $default  reduce using rule 7 (subprograma)


State 9

    1 programa: subprogramas .

    $default  reduce using rule 1 (programa)


State 10

    3 subprogramas: subprograma .
    4             | subprograma . subprogramas

    ID     shift, and go to state 1
    MAIN   shift, and go to state 2
    FUNC   shift, and go to state 3
    PROC   shift, and go to state 4
    VAR    shift, and go to state 5
    CONST  shift, and go to state 6

    $default  reduce using rule 3 (subprogramas)

    principal        go to state 8
    subprogramas     go to state 22
    subprograma      go to state 10
    proc             go to state 11
    funcao           go to state 12
    atribuicao       go to state 13
    atribuicaoArray  go to state 14


State 11

    5 subprograma: proc .

    $default  reduce using rule 5 (subprograma)


State 12

    6 subprograma: funcao .

    $default  reduce using rule 6 (subprograma)


State 13

    8 subprograma: atribuicao .

    $default  reduce using rule 8 (subprograma)


State 14

   30 atribuicao: atribuicaoArray .

    $default  reduce using rule 30 (atribuicao)


State 15

   29 atribuicao: ID OP_ATRIBUICAO . expr PONTO_VIRGULA

    V_INTEIRO      shift, and go to state 23
    V_REAL         shift, and go to state 24
    V_STRING       shift, and go to state 25
    ID             shift, and go to state 26
    VERDADE        shift, and go to state 27
    FALSO          shift, and go to state 28
    OP_LOGICO_NEG  shift, and go to state 29
    OP_INC         shift, and go to state 30
    OP_DEC         shift, and go to state 31

    expr                 go to state 32
    termo                go to state 33
    acessoArray          go to state 34
    exprUnaria           go to state 35
    exprBinaria          go to state 36
    literal              go to state 37
    literalBool          go to state 38
    chamadaProcOuFuncao  go to state 39


State 16

    2 principal: MAIN ABRE_PAREN . FECHA_PAREN ABRE_CHAVES sentencas FECHA_CHAVES

    FECHA_PAREN  shift, and go to state 40


State 17

   11 funcao: FUNC ID . ABRE_PAREN FECHA_PAREN DOIS_PONTOS tipoPrimitivo ABRE_CHAVES sentencas FECHA_CHAVES
   12       | FUNC ID . ABRE_PAREN params FECHA_PAREN DOIS_PONTOS tipoPrimitivo ABRE_CHAVES sentencas FECHA_CHAVES

    ABRE_PAREN  shift, and go to state 41


State 18

    9 proc: PROC ID . ABRE_PAREN FECHA_PAREN ABRE_CHAVES sentencas FECHA_CHAVES
   10     | PROC ID . ABRE_PAREN params FECHA_PAREN ABRE_CHAVES sentencas FECHA_CHAVES

    ABRE_PAREN  shift, and go to state 42


State 19

   27 atribuicao: VAR ID . DOIS_PONTOS tipoPrimitivo OP_ATRIBUICAO expr PONTO_VIRGULA
   31 atribuicaoArray: VAR ID . DOIS_PONTOS ABRE_COLCHETE tipoPrimitivo FECHA_COLCHETE OP_ATRIBUICAO instanciaArray

    DOIS_PONTOS  shift, and go to state 43


State 20

   28 atribuicao: CONST ID . DOIS_PONTOS tipoPrimitivo OP_ATRIBUICAO expr PONTO_VIRGULA
   32 atribuicaoArray: CONST ID . DOIS_PONTOS ABRE_COLCHETE tipoPrimitivo FECHA_COLCHETE OP_ATRIBUICAO instanciaArray

    DOIS_PONTOS  shift, and go to state 44


State 21

    0 $accept: programa $end .

    $default  accept


State 22

    4 subprogramas: subprograma subprogramas .

    $default  reduce using rule 4 (subprogramas)


State 23

   75 literal: V_INTEIRO .

    $default  reduce using rule 75 (literal)


State 24

   76 literal: V_REAL .

    $default  reduce using rule 76 (literal)


State 25

   77 literal: V_STRING .

    $default  reduce using rule 77 (literal)


State 26

   45 termo: ID .
   48 acessoArray: ID . ABRE_COLCHETE V_INTEIRO FECHA_COLCHETE
   49            | ID . ABRE_COLCHETE ID FECHA_COLCHETE
   89 chamadaProcOuFuncao: ID . ABRE_PAREN FECHA_PAREN PONTO_VIRGULA
   90                    | ID . ABRE_PAREN listaIds FECHA_PAREN PONTO_VIRGULA

    ABRE_PAREN     shift, and go to state 45
    ABRE_COLCHETE  shift, and go to state 46

    $default  reduce using rule 45 (termo)


State 27

   79 literalBool: VERDADE .

    $default  reduce using rule 79 (literalBool)


State 28

   80 literalBool: FALSO .

    $default  reduce using rule 80 (literalBool)


State 29

   52 exprUnaria: OP_LOGICO_NEG . expr

    V_INTEIRO      shift, and go to state 23
    V_REAL         shift, and go to state 24
    V_STRING       shift, and go to state 25
    ID             shift, and go to state 26
    VERDADE        shift, and go to state 27
    FALSO          shift, and go to state 28
    OP_LOGICO_NEG  shift, and go to state 29
    OP_INC         shift, and go to state 30
    OP_DEC         shift, and go to state 31

    expr                 go to state 47
    termo                go to state 33
    acessoArray          go to state 34
    exprUnaria           go to state 35
    exprBinaria          go to state 36
    literal              go to state 37
    literalBool          go to state 38
    chamadaProcOuFuncao  go to state 39


State 30

   50 exprUnaria: OP_INC . termo

    V_INTEIRO  shift, and go to state 23
    V_REAL     shift, and go to state 24
    V_STRING   shift, and go to state 25
    ID         shift, and go to state 26
    VERDADE    shift, and go to state 27
    FALSO      shift, and go to state 28

    termo                go to state 48
    acessoArray          go to state 34
    literal              go to state 37
    literalBool          go to state 38
    chamadaProcOuFuncao  go to state 39


State 31

   51 exprUnaria: OP_DEC . termo

    V_INTEIRO  shift, and go to state 23
    V_REAL     shift, and go to state 24
    V_STRING   shift, and go to state 25
    ID         shift, and go to state 26
    VERDADE    shift, and go to state 27
    FALSO      shift, and go to state 28

    termo                go to state 49
    acessoArray          go to state 34
    literal              go to state 37
    literalBool          go to state 38
    chamadaProcOuFuncao  go to state 39


State 32

   29 atribuicao: ID OP_ATRIBUICAO expr . PONTO_VIRGULA
   53 exprBinaria: expr . operadorBinario termo
   54            | expr . operadorBinario exprUnaria

    PONTO_VIRGULA   shift, and go to state 50
    OP_SOMA         shift, and go to state 51
    OP_SUB          shift, and go to state 52
    OP_MULT         shift, and go to state 53
    OP_DIV          shift, and go to state 54
    OP_RESTO        shift, and go to state 55
    OP_LOGICO_OU    shift, and go to state 56
    OP_LOGICO_E     shift, and go to state 57
    OP_MENOR        shift, and go to state 58
    OP_MAIOR        shift, and go to state 59
    OP_MENOR_IGUAL  shift, and go to state 60
    OP_MAIOR_IGUAL  shift, and go to state 61
    OP_IGUALDADE    shift, and go to state 62
    OP_DIFERENTE    shift, and go to state 63

    operadorBinario     go to state 64
    operadorAritmetico  go to state 65
    operadorLogico      go to state 66
    operadorRelacional  go to state 67


State 33

   41 expr: termo .

    $default  reduce using rule 41 (expr)


State 34

   46 termo: acessoArray .

    $default  reduce using rule 46 (termo)


State 35

   42 expr: exprUnaria .

    $default  reduce using rule 42 (expr)


State 36

   43 expr: exprBinaria .

    $default  reduce using rule 43 (expr)


State 37

   44 termo: literal .

    $default  reduce using rule 44 (termo)


State 38

   78 literal: literalBool .

    $default  reduce using rule 78 (literal)


State 39

   47 termo: chamadaProcOuFuncao .

    $default  reduce using rule 47 (termo)


State 40

    2 principal: MAIN ABRE_PAREN FECHA_PAREN . ABRE_CHAVES sentencas FECHA_CHAVES

    ABRE_CHAVES  shift, and go to state 68


State 41

   11 funcao: FUNC ID ABRE_PAREN . FECHA_PAREN DOIS_PONTOS tipoPrimitivo ABRE_CHAVES sentencas FECHA_CHAVES
   12       | FUNC ID ABRE_PAREN . params FECHA_PAREN DOIS_PONTOS tipoPrimitivo ABRE_CHAVES sentencas FECHA_CHAVES

    TIPO_CHAR    shift, and go to state 69
    TIPO_VOID    shift, and go to state 70
    TIPO_REAL    shift, and go to state 71
    TIPO_INT     shift, and go to state 72
    TIPO_STRING  shift, and go to state 73
    TIPO_BOOL    shift, and go to state 74
    FECHA_PAREN  shift, and go to state 75

    params         go to state 76
    param          go to state 77
    tipoPrimitivo  go to state 78


State 42

    9 proc: PROC ID ABRE_PAREN . FECHA_PAREN ABRE_CHAVES sentencas FECHA_CHAVES
   10     | PROC ID ABRE_PAREN . params FECHA_PAREN ABRE_CHAVES sentencas FECHA_CHAVES

    TIPO_CHAR    shift, and go to state 69
    TIPO_VOID    shift, and go to state 70
    TIPO_REAL    shift, and go to state 71
    TIPO_INT     shift, and go to state 72
    TIPO_STRING  shift, and go to state 73
    TIPO_BOOL    shift, and go to state 74
    FECHA_PAREN  shift, and go to state 79

    params         go to state 80
    param          go to state 77
    tipoPrimitivo  go to state 78


State 43

   27 atribuicao: VAR ID DOIS_PONTOS . tipoPrimitivo OP_ATRIBUICAO expr PONTO_VIRGULA
   31 atribuicaoArray: VAR ID DOIS_PONTOS . ABRE_COLCHETE tipoPrimitivo FECHA_COLCHETE OP_ATRIBUICAO instanciaArray

    TIPO_CHAR      shift, and go to state 69
    TIPO_VOID      shift, and go to state 70
    TIPO_REAL      shift, and go to state 71
    TIPO_INT       shift, and go to state 72
    TIPO_STRING    shift, and go to state 73
    TIPO_BOOL      shift, and go to state 74
    ABRE_COLCHETE  shift, and go to state 81

    tipoPrimitivo  go to state 82


State 44

   28 atribuicao: CONST ID DOIS_PONTOS . tipoPrimitivo OP_ATRIBUICAO expr PONTO_VIRGULA
   32 atribuicaoArray: CONST ID DOIS_PONTOS . ABRE_COLCHETE tipoPrimitivo FECHA_COLCHETE OP_ATRIBUICAO instanciaArray

    TIPO_CHAR      shift, and go to state 69
    TIPO_VOID      shift, and go to state 70
    TIPO_REAL      shift, and go to state 71
    TIPO_INT       shift, and go to state 72
    TIPO_STRING    shift, and go to state 73
    TIPO_BOOL      shift, and go to state 74
    ABRE_COLCHETE  shift, and go to state 83

    tipoPrimitivo  go to state 84


State 45

   89 chamadaProcOuFuncao: ID ABRE_PAREN . FECHA_PAREN PONTO_VIRGULA
   90                    | ID ABRE_PAREN . listaIds FECHA_PAREN PONTO_VIRGULA

    V_INTEIRO      shift, and go to state 23
    V_REAL         shift, and go to state 24
    V_STRING       shift, and go to state 25
    ID             shift, and go to state 26
    VERDADE        shift, and go to state 27
    FALSO          shift, and go to state 28
    FECHA_PAREN    shift, and go to state 85
    OP_LOGICO_NEG  shift, and go to state 29
    OP_INC         shift, and go to state 30
    OP_DEC         shift, and go to state 31

    expr                 go to state 86
    termo                go to state 33
    acessoArray          go to state 34
    exprUnaria           go to state 35
    exprBinaria          go to state 36
    literal              go to state 37
    literalBool          go to state 38
    listaIds             go to state 87
    chamadaProcOuFuncao  go to state 39


State 46

   48 acessoArray: ID ABRE_COLCHETE . V_INTEIRO FECHA_COLCHETE
   49            | ID ABRE_COLCHETE . ID FECHA_COLCHETE

    V_INTEIRO  shift, and go to state 88
    ID         shift, and go to state 89


State 47

   52 exprUnaria: OP_LOGICO_NEG expr .
   53 exprBinaria: expr . operadorBinario termo
   54            | expr . operadorBinario exprUnaria

    OP_SOMA         shift, and go to state 51
    OP_SUB          shift, and go to state 52
    OP_MULT         shift, and go to state 53
    OP_DIV          shift, and go to state 54
    OP_RESTO        shift, and go to state 55
    OP_LOGICO_OU    shift, and go to state 56
    OP_LOGICO_E     shift, and go to state 57
    OP_MENOR        shift, and go to state 58
    OP_MAIOR        shift, and go to state 59
    OP_MENOR_IGUAL  shift, and go to state 60
    OP_MAIOR_IGUAL  shift, and go to state 61
    OP_IGUALDADE    shift, and go to state 62
    OP_DIFERENTE    shift, and go to state 63

    $default  reduce using rule 52 (exprUnaria)

    operadorBinario     go to state 64
    operadorAritmetico  go to state 65
    operadorLogico      go to state 66
    operadorRelacional  go to state 67


State 48

   50 exprUnaria: OP_INC termo .

    $default  reduce using rule 50 (exprUnaria)


State 49

   51 exprUnaria: OP_DEC termo .

    $default  reduce using rule 51 (exprUnaria)


State 50

   29 atribuicao: ID OP_ATRIBUICAO expr PONTO_VIRGULA .

    $default  reduce using rule 29 (atribuicao)


State 51

   58 operadorAritmetico: OP_SOMA .

    $default  reduce using rule 58 (operadorAritmetico)


State 52

   59 operadorAritmetico: OP_SUB .

    $default  reduce using rule 59 (operadorAritmetico)


State 53

   60 operadorAritmetico: OP_MULT .

    $default  reduce using rule 60 (operadorAritmetico)


State 54

   61 operadorAritmetico: OP_DIV .

    $default  reduce using rule 61 (operadorAritmetico)


State 55

   62 operadorAritmetico: OP_RESTO .

    $default  reduce using rule 62 (operadorAritmetico)


State 56

   64 operadorLogico: OP_LOGICO_OU .

    $default  reduce using rule 64 (operadorLogico)


State 57

   63 operadorLogico: OP_LOGICO_E .

    $default  reduce using rule 63 (operadorLogico)


State 58

   68 operadorRelacional: OP_MENOR .

    $default  reduce using rule 68 (operadorRelacional)


State 59

   67 operadorRelacional: OP_MAIOR .

    $default  reduce using rule 67 (operadorRelacional)


State 60

   70 operadorRelacional: OP_MENOR_IGUAL .

    $default  reduce using rule 70 (operadorRelacional)


State 61

   69 operadorRelacional: OP_MAIOR_IGUAL .

    $default  reduce using rule 69 (operadorRelacional)


State 62

   65 operadorRelacional: OP_IGUALDADE .

    $default  reduce using rule 65 (operadorRelacional)


State 63

   66 operadorRelacional: OP_DIFERENTE .

    $default  reduce using rule 66 (operadorRelacional)


State 64

   53 exprBinaria: expr operadorBinario . termo
   54            | expr operadorBinario . exprUnaria

    V_INTEIRO      shift, and go to state 23
    V_REAL         shift, and go to state 24
    V_STRING       shift, and go to state 25
    ID             shift, and go to state 26
    VERDADE        shift, and go to state 27
    FALSO          shift, and go to state 28
    OP_LOGICO_NEG  shift, and go to state 29
    OP_INC         shift, and go to state 30
    OP_DEC         shift, and go to state 31

    termo                go to state 90
    acessoArray          go to state 34
    exprUnaria           go to state 91
    literal              go to state 37
    literalBool          go to state 38
    chamadaProcOuFuncao  go to state 39


State 65

   55 operadorBinario: operadorAritmetico .

    $default  reduce using rule 55 (operadorBinario)


State 66

   56 operadorBinario: operadorLogico .

    $default  reduce using rule 56 (operadorBinario)


State 67

   57 operadorBinario: operadorRelacional .

    $default  reduce using rule 57 (operadorBinario)


State 68

    2 principal: MAIN ABRE_PAREN FECHA_PAREN ABRE_CHAVES . sentencas FECHA_CHAVES

    V_INTEIRO      shift, and go to state 23
    V_REAL         shift, and go to state 24
    V_STRING       shift, and go to state 25
    ID             shift, and go to state 92
    RETORNO        shift, and go to state 93
    VERDADE        shift, and go to state 27
    FALSO          shift, and go to state 28
    VAR            shift, and go to state 5
    CONST          shift, and go to state 6
    SE             shift, and go to state 94
    ENQUANTO       shift, and go to state 95
    PARA           shift, and go to state 96
    IMPRIME        shift, and go to state 97
    LIBERA         shift, and go to state 98
    OP_LOGICO_NEG  shift, and go to state 29
    OP_INC         shift, and go to state 30
    OP_DEC         shift, and go to state 31

    sentencas            go to state 99
    sentenca             go to state 100
    atribuicao           go to state 101
    atribuicaoArray      go to state 14
    se                   go to state 102
    enquanto             go to state 103
    para                 go to state 104
    expr                 go to state 105
    termo                go to state 33
    acessoArray          go to state 34
    exprUnaria           go to state 35
    exprBinaria          go to state 36
    imprime              go to state 106
    literal              go to state 37
    literalBool          go to state 38
    chamadaProcOuFuncao  go to state 107


State 69

   82 tipoPrimitivo: TIPO_CHAR .

    $default  reduce using rule 82 (tipoPrimitivo)


State 70

   84 tipoPrimitivo: TIPO_VOID .

    $default  reduce using rule 84 (tipoPrimitivo)


State 71

   83 tipoPrimitivo: TIPO_REAL .

    $default  reduce using rule 83 (tipoPrimitivo)


State 72

   81 tipoPrimitivo: TIPO_INT .

    $default  reduce using rule 81 (tipoPrimitivo)


State 73

   85 tipoPrimitivo: TIPO_STRING .

    $default  reduce using rule 85 (tipoPrimitivo)


State 74

   86 tipoPrimitivo: TIPO_BOOL .

    $default  reduce using rule 86 (tipoPrimitivo)


State 75

   11 funcao: FUNC ID ABRE_PAREN FECHA_PAREN . DOIS_PONTOS tipoPrimitivo ABRE_CHAVES sentencas FECHA_CHAVES

    DOIS_PONTOS  shift, and go to state 108


State 76

   12 funcao: FUNC ID ABRE_PAREN params . FECHA_PAREN DOIS_PONTOS tipoPrimitivo ABRE_CHAVES sentencas FECHA_CHAVES

    FECHA_PAREN  shift, and go to state 109


State 77

   13 params: param .
   14       | param . VIRGULA params

    VIRGULA  shift, and go to state 110

    $default  reduce using rule 13 (params)


State 78

   15 param: tipoPrimitivo . ID

    ID  shift, and go to state 111


State 79

    9 proc: PROC ID ABRE_PAREN FECHA_PAREN . ABRE_CHAVES sentencas FECHA_CHAVES

    ABRE_CHAVES  shift, and go to state 112


State 80

   10 proc: PROC ID ABRE_PAREN params . FECHA_PAREN ABRE_CHAVES sentencas FECHA_CHAVES

    FECHA_PAREN  shift, and go to state 113


State 81

   31 atribuicaoArray: VAR ID DOIS_PONTOS ABRE_COLCHETE . tipoPrimitivo FECHA_COLCHETE OP_ATRIBUICAO instanciaArray

    TIPO_CHAR    shift, and go to state 69
    TIPO_VOID    shift, and go to state 70
    TIPO_REAL    shift, and go to state 71
    TIPO_INT     shift, and go to state 72
    TIPO_STRING  shift, and go to state 73
    TIPO_BOOL    shift, and go to state 74

    tipoPrimitivo  go to state 114


State 82

   27 atribuicao: VAR ID DOIS_PONTOS tipoPrimitivo . OP_ATRIBUICAO expr PONTO_VIRGULA

    OP_ATRIBUICAO  shift, and go to state 115


State 83

   32 atribuicaoArray: CONST ID DOIS_PONTOS ABRE_COLCHETE . tipoPrimitivo FECHA_COLCHETE OP_ATRIBUICAO instanciaArray

    TIPO_CHAR    shift, and go to state 69
    TIPO_VOID    shift, and go to state 70
    TIPO_REAL    shift, and go to state 71
    TIPO_INT     shift, and go to state 72
    TIPO_STRING  shift, and go to state 73
    TIPO_BOOL    shift, and go to state 74

    tipoPrimitivo  go to state 116


State 84

   28 atribuicao: CONST ID DOIS_PONTOS tipoPrimitivo . OP_ATRIBUICAO expr PONTO_VIRGULA

    OP_ATRIBUICAO  shift, and go to state 117


State 85

   89 chamadaProcOuFuncao: ID ABRE_PAREN FECHA_PAREN . PONTO_VIRGULA

    PONTO_VIRGULA  shift, and go to state 118


State 86

   53 exprBinaria: expr . operadorBinario termo
   54            | expr . operadorBinario exprUnaria
   87 listaIds: expr .
   88         | expr . VIRGULA listaIds

    VIRGULA         shift, and go to state 119
    OP_SOMA         shift, and go to state 51
    OP_SUB          shift, and go to state 52
    OP_MULT         shift, and go to state 53
    OP_DIV          shift, and go to state 54
    OP_RESTO        shift, and go to state 55
    OP_LOGICO_OU    shift, and go to state 56
    OP_LOGICO_E     shift, and go to state 57
    OP_MENOR        shift, and go to state 58
    OP_MAIOR        shift, and go to state 59
    OP_MENOR_IGUAL  shift, and go to state 60
    OP_MAIOR_IGUAL  shift, and go to state 61
    OP_IGUALDADE    shift, and go to state 62
    OP_DIFERENTE    shift, and go to state 63

    $default  reduce using rule 87 (listaIds)

    operadorBinario     go to state 64
    operadorAritmetico  go to state 65
    operadorLogico      go to state 66
    operadorRelacional  go to state 67


State 87

   90 chamadaProcOuFuncao: ID ABRE_PAREN listaIds . FECHA_PAREN PONTO_VIRGULA

    FECHA_PAREN  shift, and go to state 120


State 88

   48 acessoArray: ID ABRE_COLCHETE V_INTEIRO . FECHA_COLCHETE

    FECHA_COLCHETE  shift, and go to state 121


State 89

   49 acessoArray: ID ABRE_COLCHETE ID . FECHA_COLCHETE

    FECHA_COLCHETE  shift, and go to state 122


State 90

   53 exprBinaria: expr operadorBinario termo .

    $default  reduce using rule 53 (exprBinaria)


State 91

   54 exprBinaria: expr operadorBinario exprUnaria .

    $default  reduce using rule 54 (exprBinaria)


State 92
